--- a/Assignment3/.classpath
+++ b/Assignment3/.classpath
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<accessrules>
+			<accessrule kind="accessible" pattern="javafx/*"/>
+			<accessrule kind="accessible" pattern="javafx/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX13"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/slf4j-nop-1.7.26.jar"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/scribejava-core-6.2.0.jar"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/scribejava-apis-6.6.3.jar"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/jackson-databind-2.9.9.jar"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/jackson-core-2.9.9.jar"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/jackson-annotations-2.9.0.jar"/>
-	<classpathentry kind="lib" path="/home/student/eclipse-workspace/206_FlickrExample/libs/flickr4java-3.0.1.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/flickr4java-3.0.1.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/jackson-annotations-2.9.0.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/jackson-core-2.9.9.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/jackson-databind-2.9.9.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/scribejava-apis-6.6.3.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/scribejava-core-6.2.0.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="/afs/ec.auckland.ac.nz/users/s/t/stre757/unixhome/git/assignment3/Assignment3/libs/slf4j-nop-1.7.26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
